From 90 to 34 unused variables thanks to PMD and Maven!